# virtual-library-card

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  tox.ini
.github/: codecov.yml  dependabot.yml
.github/workflows/: build.yml  claude-review.yml  jira-release-sync.yml  lint.yml  test.yml
VirtualLibraryCard/: admin.py  apps.py  models.py  serializers.py
VirtualLibraryCard/business_rules/: library.py  library_card.py  place_import.py  user.py
VirtualLibraryCard/forms/: __init__.py  forms.py  forms_library_card.py  forms_password.py  forms_profile.py
VirtualLibraryCard/management/commands/: createsuperusernoninteractive.py
VirtualLibraryCard/views/: __init__.py  admin_email_customize.py  views.py  views_api.py  views_library_card.py  views_password.py  views_profile.py  views_verification.py
VirtualLibraryCard/widgets/: buttons.py
ci/minio/: Dockerfile  entrypoint.sh
docker/ci/: test_webapp.sh
locale/en/LC_MESSAGES/: django.po
static/css/: admin.css  icomoon.css  login-main.css  style-mobile.css  style-tablet.css  style.css
static/js/: main-login.js  main.js
static/js/admin/: place.js
static/ndjson/: bb-places.ndjson  seed_places.ndjson
templates/django/: 400.html  500.html  index.html  layout.html  layout_without_branding.html  minimal_layout.html  minimal_layout_geoloc.html
templates/django/accounts/: customer_confirm_delete.html  delete_profile_success.html  edit_profile.html  profile.html
templates/django/accounts/includes/: profile_address.html  profile_info.html  profile_library.html
templates/django/accounts/password/: change_password.html  password_change_done.html
templates/django/admin/: base_site.html  change_form.html  customize_welcome_email.html  user_add_form.html
templates/django/admin/virtuallibrarycard/customuser/: change_list_object_tools.html
templates/django/admin/virtuallibrarycard/librarycard/: change_form.html  change_list_object_tools.html
templates/django/email/: csv_upload_report.html  email_verification.html  number_sequence_alert.html  number_sequence_alert.txt  welcome_user.html  welcome_user.txt
templates/django/includes/: footer.html  footer_scripts.html  header.html  header_logo.html  library_contact_info.html  library_links.html  menu.html  minimal_footer.html
templates/django/library_card/: library_card_request.html  library_card_request_denied.html  library_card_request_denied_country.html  library_card_request_denied_geoloc.html  library_card_request_success.html  library_card_signup.html  upload_by_csv.html
templates/django/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  reset_password.html
templates/django/templated_email/: number_sequence_alert.email  welcome_user.email
templates/django/verification/: email_error.html  email_resend.html  email_success.html
templates/jinja/api/: dump.html  pin_test.html
tests/: base.py  test_base_test.py  test_card_request.py  test_card_signup.py  test_logging.py  test_models.py  test_states_places_migration.py  test_wsgi.py
tests/admin/: test_custom_user_admin_views.py  test_email_customization.py  test_library_admin_views.py  test_library_card_admin_views.py  test_place_admin_views.py
tests/api/: test_dynamic_links.py
tests/business_rules/: test_library_card_bulk_upload.py  test_library_rules.py  test_place_rules.py  test_user_rules.py
tests/files/: sample_places.ndjson
tests/misc/: test_card_number.py  test_geo.py  test_profanity.py  test_sender.py  test_storage.py  test_user_session.py
tests/views/: test_api_views.py  test_card_views.py  test_password_views.py  test_profile_views.py  test_verification_view.py  test_version_view.py
virtual_library_card/: __init__.py  card_number.py  geoloc.py  location_utils.py  logging.py  profanity.py  sender.py  smarty_streets.py  storage.py  tokens.py  urls.py  user_session.py  wsgi.py
virtual_library_card/api/: dynamic_links.py
virtual_library_card/settings/: base.py  dev.py
virtuallibrarycard/: admin.py  apps.py  models.py
virtuallibrarycard/business_rules/: library.py  library_card.py  place_import.py  user.py
virtuallibrarycard/forms/: forms.py  forms_library_card.py  forms_password.py  forms_profile.py
virtuallibrarycard/management/commands/: makemigrations.py  rename_app_permissions.py
virtuallibrarycard/migrations/: 0001_squashed_0092_remove_library_sequence_down_and_more.py  0093_alter_library_options_remove_customuser_city_and_more.py  0094_remove_library_uuid.py
virtuallibrarycard/templates/: form_button_input.html
virtuallibrarycard/views/: __init__.py  admin_email_customize.py  views_api.py  views_library_card.py  views_password.py  views_profile.py  views_verification.py  views_version.py
virtuallibrarycard/widgets/: buttons.py
