[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    '^\s*\.\.\.\s*$',
    '^\s*pass\s*$',
    '^\s*raise NotImplementedError\s*$',
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["virtual_library_card", "virtuallibrarycard"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "Virtual Library Card Creator"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "Virtual Library Card"
packages = [
    {include = "virtual_library_card"},
    {include = "virtuallibrarycard"},
]
readme = "README.md"
repository = "https://github.com/ThePalaceProject/virtual-library-card"
version = "0"  # Version number is managed with tags in git

[tool.poetry.dependencies]
attrs = "^23.1.0"
better-profanity = "^0.7.0"
boto3 = "^1.26.90"
certifi = "2024.2.2"
chardet = "^5.1.0"
crispy-bootstrap4 = "^2023.1"
crispy-forms-materialize = "0.2"
datedelta = "1.4"
Django = "^4.2.3"
django-absoluteuri = "1.3.0"
django-appconf = "1.0.6"
django-autocomplete-light = "^3.9.4"
django-bootstrap4 = "^24.1"
django-compressor = "^4.4"
django-compressor-postcss = "0.8.2"
django-crispy-forms = "2.1"
django-htmlmin = "0.11.0"
django-localflavor = "4.0"
django-localflavor-us = "1.1"
django-material = "1.12.0"
django-materialize-css = "0.0.1"
django-recaptcha = "^4.0.0"
django-render-block = "0.9.2"
django-storages = "^1.13.2"
djangorestframework = "3.14.0"
jinja2 = "3.1.3"
Pillow = "10.2.0"
psycopg2-binary = "2.9.9"
PyJWT = "^2.6.0"
python = ">=3.8,<4"
python-stdnum = "1.19"
pytz = "^2024.1"
pyuwsgi = ">=2.0,<2.1"
requests = "^2.31"
setuptools = "^69.1.0"

[tool.poetry.group.ci.dependencies]
dunamai = "^1.16"
pre-commit = "^3.0"
tox = "^4.5"
tox-docker = "^4.0"
tox-gh-actions = "^3.0"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=xml",
]
DJANGO_SETTINGS_MODULE = "virtual_library_card.settings.dev"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
