[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
ci = [
    "dunamai>=1.16,<2",
    "pre-commit>=4.2,<5",
    "tox-docker>=5.0,<6",
    "tox-gh-actions>=3.0,<4",
    "tox-uv>=1.35.1,<2",
    "tox>=4.5,<5",
]
dev = [
    "django-stubs[compatible-mypy]>=6.0.0,<7",
    "mypy>=1.7.0,<2",
    "parameterized>=0.9,<0.10",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.11.1,<5",
    "pytest>=9.0.0,<10",
    "types-requests>=2.28.11,<3",
]

[project]
authors = [{email = "info@thepalaceproject.org", name = "The Palace Project"}]
description = "Virtual Library Card Creator"
license = "Apache-2.0"
name = "virtual-library-card"
readme = "README.md"
requires-python = ">=3.12,<4"
version = "0"
dependencies = [
    "PyJWT>=2.6.0,<3",
    "Pillow==12.2.0",
    "attrs>=26.1.0,<27",
    "better-profanity>=0.7.0,<0.8",
    "boto3>=1.26.90,<2",
    "certifi>=2026.1.4,<2027",
    "chardet>=7.4.0,<8",
    "crispy-bootstrap4>=2026.2,<2027",
    "crispy-forms-materialize==0.2",
    "datedelta==1.4",
    "django-absoluteuri==2.0.0",
    "django-appconf==1.2.0",
    "django-autocomplete-light>=3.9.4,<4",
    "django-bootstrap4>=26.1,<27",
    "django-compressor-postcss==0.8.2",
    "django-compressor>=4.4,<5",
    "django-crispy-forms==2.6",
    "django-htmlmin==0.11.0",
    "django-localflavor-us==1.1",
    "django-localflavor==5.0",
    "django-material==1.12.0",
    "django-materialize-css==0.0.1",
    "django-recaptcha>=4.0.0,<5",
    "django-render-block==0.11",
    "django-storages>=1.13.2,<2",
    "django<7.0",
    "djangorestframework>=3.16.0,<4",
    "jinja2==3.1.6",
    "psycopg2-binary==2.9.12",
    "python-stdnum==2.2",
    "pyuwsgi>=2.0,<2.1",
    "requests>=2.31,<3",
    "setuptools>=82.0.0,<83",
]

[project.urls]
Homepage = "https://thepalaceproject.org"
Repository = "https://github.com/ThePalaceProject/virtual-library-card"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    '^\s*\.\.\.\s*$',
    '^\s*pass\s*$',
    '^\s*raise NotImplementedError\s*$',
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["virtual_library_card", "virtuallibrarycard"]

[tool.django-stubs]
django_settings_module = "virtual_library_card.settings.dev"

[tool.hatch.build.targets.wheel]
packages = ["virtual_library_card", "virtuallibrarycard"]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.mypy]
# TODO: Enable the the check_untyped_defs option
# This will get rid of the warnings that we get when running mypy
# > note: By default the bodies of untyped functions are not checked
# However this currently causes a number of errors to surface that will
# need to be cleaned up before we can enable the option.
# check_untyped_defs = true
# When we enable this option, we should remove this disable. Its just here
# to silence the noise in the mypy output for now, so its easier to see when
# there are errors in the output.
disable_error_code = "annotation-unchecked"
files = ["."]
plugins = ["mypy_django_plugin.main"]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# This override silences errors for modules we import that don't currently
# have type hints, or type stubs that cover them. We should go through this
# list periodically and remove modules that have since added type hints.
ignore_missing_imports = true
module = [
    "better_profanity.*",
    "crispy_forms.*",
    "dal.*",
    "datedelta.*",
    "localflavor.*",
    "parameterized.*",
    "rest_framework.*",
    "uwsgi.*",
    # This is ignored because the file is created when building a container
    # so it typically doesn't exist when running mypy, but since it only
    # contains a couple version strings it can be safely ignored
    "virtual_library_card._version",
]

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=xml",
]
DJANGO_SETTINGS_MODULE = "virtual_library_card.settings.dev"
filterwarnings = [
    "error",
    # django-material has been merged into django-viewflow but is still functional
    "ignore:The package was merged into django-viewflow:UserWarning:material",
]

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
